feat(animal-types): Add the ability to specify different animal types

--- a/src/components/Animal/Animal.css
+++ b/src/components/Animal/Animal.css
@@ -16,6 +16,10 @@
     color: #2196f3;
    
 }
+
+.animal-container h1 {
+    text-transform: capitalize;
+}
   
 .animal-animal {
     margin-bottom: 20px;
