--- a/src/components/Animal/Animal.css
+++ b/src/components/Animal/Animal.css
@@ -26,10 +26,9 @@
 }
   
 .animal-image {
-    border-radius: 50%;
     width: 150px;
     height: 150px;
-    object-fit: cover;
+    object-fit: fill;
 }
   
 .animal-stats {
